<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dabatten.convoy.NewGroupActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_name"
        android:id="@+id/group_name_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/primary_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_name_field"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_desc"
        android:id="@+id/group_desc_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/primary_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/group_desc_field"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_key"
        android:textColor="@color/primary_text"
        android:id="@+id/group_key_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/group_key"
        android:text="@string/group_key"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/primary_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_key_desc"
        android:textColor="@color/secondary_text"
        android:id="@+id/group_key_desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_group_button_text"
        android:textColor="@color/icons"
        android:background="@color/primary"
        android:id="@+id/new_group_button"
        android:padding="5dp"
        android:layout_marginTop="50dp" />


</LinearLayout>
