<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dabatten.convoy.GroupActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_key"
        android:textColor="@color/primary_text"
        android:id="@+id/group_key_text2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/group_key"
        android:textColor="@color/primary"
        android:id="@+id/group_key2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/group_key_desc"
        android:textColor="@color/secondary_text"
        android:id="@+id/group_key_desc2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_members"
        android:textColor="@color/primary_text"
        android:id="@+id/group_members_text" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/group_members_list"
        android:padding="5dp" />


</LinearLayout>
